--- a/portfolio.css
+++ b/portfolio.css
@@ -1,53 +1,42 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Rasa', serif;
+/*
+.black-line {
+  align-self: end;
+  width: 50%;
+  height: 15%;
+  margin-bottom: 4em;
+  position: absolute;
+	bottom:0px;
+	left: -3%;
+	border-right: 1px solid  rgba(41,41,41,0.30);
+}*/
+
+.black-line::after{
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 11px 11px 0 11px;
+ border-color:  #292929 transparent transparent transparent;
+  right: -.7em;
+  bottom: -2px;
+}
+.social{
+	position: absolute;
+	left: 50px;
+	bottom: 50px;
+	display: flex;
 
 }
-
-.center {
-
-    display: block;
-    margin-top: 80px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 15%;
+.social a{
+	margin: 6px 12px;
 
 }
-
-.name {
-
-    display: block;
-    text-align: center;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 15%;
-
+.social i{
+	color:rgba(18,17,17,0.40);
+	font-size: 14px;
 }
-
-.position {
-
-    display: block;
-    margin-top: 10px;
-    text-align: center;
-    margin: auto;
-    width: 15%;
-
-}
-
-.bgimg{
-
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-  
-    /* Full height */
-    height: 100%;
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-
+.social a:hover i{
+	color:#17d1ac;
+	transition: all ease 0.5s;
 }
