--- a/portfolio.css
+++ b/portfolio.css
@@ -21,7 +21,7 @@ a{
 	background-size: 1330px;
 	background-position: right bottom;
 	background-repeat: no-repeat;
-	background-image: url("background.png");
+	background-image: url("https://drive.google.com/file/d/1FwrB7Bac8438fNfQLWTRQ0DCFbDrTM_u/view?usp=sharing");
 	background-color: #edf1fd;
 }
 /*
