--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 body{
+	overflow-x: hidden;
+	overflow-y: hidden;
 	margin:0px;
 	padding:0px;
 	background-color:#16EDF1FD;
